# bottle-cap-detection

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main.yml
bsort/: __init__.py  data_prep.py  main.py  utils.py
bsort/inference/: infer.py
bsort/training/: trainer.py
config/: settings.yaml
notebooks/: colab_demo.ipynb
